<?xml version="1.0" encoding="utf-8"?><androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:layout_margin="10dp"    app:cardCornerRadius="10dp"    app:cardElevation="20dp"    android:elevation="20dp">    <androidx.constraintlayout.widget.ConstraintLayout        android:layout_width="match_parent"        android:layout_height="wrap_content">        <ImageView            android:id="@+id/iv_avatar"            android:layout_width="50dp"            android:layout_height="50dp"            android:layout_marginStart="16dp"            android:layout_marginTop="16dp"            android:src="@drawable/avatar"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="parent" />        <TextView            android:id="@+id/tv_username"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginStart="8dp"            android:fontFamily="@font/poppins"            android:text="@string/username"            android:textSize="18sp"            android:textStyle="bold"            app:layout_constraintStart_toEndOf="@+id/iv_avatar"            app:layout_constraintTop_toTopOf="@+id/iv_avatar" />        <TextView            android:id="@+id/tv_date"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:fontFamily="@font/poppins"            android:text="@string/created_at"            android:textSize="12sp"            app:layout_constraintStart_toStartOf="@+id/tv_username"            app:layout_constraintTop_toBottomOf="@+id/tv_username" />        <TextView            android:id="@+id/tv_desc"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginTop="8dp"            android:layout_marginEnd="16dp"            android:fontFamily="@font/poppins"            android:text="@string/desc"            android:textSize="16sp"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="@+id/iv_avatar"            app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />        <ImageView            android:id="@+id/iv_story"            android:layout_width="0dp"            android:layout_height="250dp"            android:layout_marginTop="8dp"            android:layout_marginBottom="8dp"            android:scaleType="centerCrop"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/tv_desc"            tools:srcCompat="@tools:sample/backgrounds/scenic" />    </androidx.constraintlayout.widget.ConstraintLayout></androidx.cardview.widget.CardView>